# pymol-open-source

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  create_shadertext.py  meson.build  pyproject.toml  setup.py
.github/workflows/: build.yml
cmake/: Dependencies.cmake  Helpers.cmake
cmake/compiler/: Clang.cmake  GNU.cmake  MSVC.cmake
cmake/dependencies/: Freetype.cmake  GL.cmake  MsgPack.cmake  OpenMP.cmake  OpenVR.cmake  Optians.cmake  Png.cmake  Testing.cmake  VMDPlugins.cmake  VTKM.cmake  XML2.cmake
cmake/platform/: Darwin.cmake  Windows.cmake
contrib/_champ/: atom.cpp  bond.cpp  champ.cpp  meson.build
contrib/_champ/.cache/clangd/index/: Algorithms.tests.cpp.C3FF8F0FDED28E92.idx  Approx.tests.cpp.CF76BB0C8527F72B.idx  BDD.tests.cpp.D269F5ED401443AD.idx  Benchmark.tests.cpp.A8B31FCDCA375F47.idx  Clara.tests.cpp.ADB6D389BBA32A78.idx  Class.tests.cpp.58A2CF6033CDB962.idx  CmdLine.tests.cpp.4E13F03DEE557488.idx  CmdLineHelpers.tests.cpp.DA6495B793997507.idx  ColourImpl.tests.cpp.FFF141A396A5903B.idx  Compilation.tests.cpp.FDC1929C112B5A8B.idx  Condition.tests.cpp.67DAD27DF2573F3D.idx  Decomposition.tests.cpp.97156F7ED4D52125.idx  Details.tests.cpp.DC5A7AD9DEF43679.idx  EnumToString.tests.cpp.69440DFEB167DEAF.idx  Exception.tests.cpp.D3BDCFD3C48E00E4.idx  FloatingPoint.tests.cpp.F711BF91E8E88A4A.idx  Generators.tests.cpp.86193599A59E5997.idx  GeneratorsImpl.tests.cpp.2BA082F7321846D6.idx  Integer.tests.cpp.937EE950B7D04017.idx  InternalBenchmark.tests.cpp.A719F3B4DF363F44.idx  Matchers.tests.cpp.365B4112089B769B.idx  MatchersRanges.tests.cpp.5386AAE385497EE8.idx  Message.tests.cpp.37D82C2CEB53B117.idx  Misc.tests.cpp.E921C26CD75D5D5B.idx  Parse.tests.cpp.64DECCA6C967EED3.idx  PartTracker.tests.cpp.23C7A5FD7BB5A166.idx  RandomNumberGeneration.tests.cpp.4334BAB155B99221.idx  Reporters.tests.cpp.E5971093AE930AFC.idx  Sharding.tests.cpp.EF2B6BA52F070DC5.idx  Sleep.tests.cpp.AD81F74049F03B67.idx  Stream.tests.cpp.9716B46DCACC3606.idx  String.tests.cpp.CBF3F83BBAE8315B.idx  StringManip.tests.cpp.7804212BB4A4C16E.idx  Tag.tests.cpp.6D989230E2BB181A.idx  TestCaseInfoHasher.tests.cpp.DA4A1BF9B31517E1.idx  TestRegistrations.cpp.D02C78D95B2CE363.idx  TestSpec.tests.cpp.C0FDDA9C689038B5.idx  TestSpecParser.tests.cpp.7C6B9B5319291BA7.idx  TextFlow.tests.cpp.8223C10CDD868C1E.idx  ToString.tests.cpp.C4676F0AD846226A.idx  (+343 more)
contrib/_champ/include/: atom.hpp  bond.hpp  champ.hpp  constants.hpp
contrib/_champ/subprojects/: catch2.wrap  pybind11.wrap
contrib/_champ/subprojects/pybind11-2.12.0/: .meson-subproject-wrap-hash.txt
contrib/_champ/tests/: atom_test.cpp  meson.build
contrib/champ/: CMakeLists.txt
contrib/mmtf-c/: sources.cmake
contrib/pocketfft/: LICENSE.md
contrib/uiuc/plugins/: sources.cmake
contrib/vr/: OpenVRMode.cpp  sources.cmake
layer0/: ContourSurf.cpp  Field.h  GraphicsUtil.cpp  MemoryUsage.cpp  ShaderMgr.cpp  Version.h  meson.build  sources.cmake
layer1/: P.cpp  P.h  meson.build  sources.cmake
layer2/: CifFile.h  CifMoleculeReader.cpp  ObjectMap.h  ObjectMesh.cpp  ObjectMolecule.cpp  ObjectMolecule.h  meson.build  sources.cmake
layer3/: Executive.cpp  Selector.cpp  meson.build  sources.cmake
layer4/: meson.build  sources.cmake
layer5/: meson.build  sources.cmake
layerCTest/: meson.build  sources.cmake
modules/chempy/: cpv.py  models.py
modules/pmg_qt/: pymol_gl_widget.py
modules/pmg_qt/syntax/: pml.py
modules/pymol/: commanding.py  editing.py  editor.py  parser.py  pymolhttpd.py  seqalign.py  setting.py  shortcut.py
ov/: sources.cmake
ov/src/: OVLexicon.cpp  meson.build
testing/: testing.py
testing/data/: cif_map.cif
testing/tests/api/: editing.py  importing.py  querying.py  test_shortcut.py
testing/tests/chempy/: test_cpv.py
testing/tests/chempy/models/: test_connected.py  test_indexed.py
