files_names = [
    'Basis.cpp',
    'ButMode.cpp',
    'Camera.cpp',
    'CGO.cpp',
    'CGOGL.cpp',
    'CGORenderer.cpp',
    'Character.cpp',
    'COLLADA.cpp',
    'Color.cpp',
    'Control.cpp',
    'Extrude.cpp',
    'Font.cpp',
    'FontGLUT.cpp',
    'FontGLUT8x13.cpp',
    'FontGLUT9x15.cpp',
    'FontGLUTHel10.cpp',
    'FontGLUTHel12.cpp',
    'FontGLUTHel18.cpp',
    'FontType.cpp',
    'Movie.cpp',
    'Ortho.cpp',
    'P.cpp',
    'PConv.cpp',
    'Picking.cpp',
    'Pop.cpp',
    'PyMOLObject.cpp',
    'Ray.cpp',
    'Rep.cpp',
    'Scene.cpp',
    'SceneMouse.cpp',
    'ScenePicking.cpp',
    'SceneRay.cpp',
    'SceneRender.cpp',
    'SceneView.cpp',
    'ScrollBar.cpp',
    'Seq.cpp',
    'Setting.cpp',
    'Shaker.cpp',
    'Symmetry.cpp',
    'SymOp.cpp',
    'SymOpPConv.cpp',
    'SymOpTools.cpp',
    'Text.cpp',
    'TypeFace.cpp',
    'View.cpp',
    'Wizard.cpp',
]

foreach file_name : files_names
  src_files += files(file_name)
endforeach

include_dirs += include_directories('.')
