files_names = [
    'AtomIterators.cpp',
    'CifDataValueFormatter.cpp',
    'Editor.cpp',
    'Executive.cpp',
    'ExecutivePython.cpp',
    'Interactions.cpp',
    'MaeExportHelpers.cpp',
    'MoleculeExporter.cpp',
    'MovieScene.cpp',
    'PlugIOManager.cpp',
    'RingFinder.cpp',
    'Seeker.cpp',
    'Selector.cpp',
    'SelectorTmp.cpp',
    'SpecRec.cpp',
    'SpecRecSpecial.cpp',
]


foreach file_name : files_names
  src_files += files(file_name)
endforeach

include_dirs += include_directories('.')
