files_names = [
    'ov_utility.cpp',
    'OVContext.cpp',
    'OVHeap.cpp',
    'OVHeapArray.cpp',
    'OVLexicon.cpp',
    'OVOneToAny.cpp',
    'OVOneToOne.cpp',
    'OVRandom.cpp',
]

foreach file_name : files_names
  src_files += files(file_name)
endforeach

include_dirs += include_directories('.')
